@@ -296,7 +296,9 @@ POSSIBILITY OF SUCH DAMAGE.
 #define TORRENT_USE_GETADAPTERSADDRESSES 1
 #define TORRENT_HAS_SALEN 0
 #define TORRENT_USE_GETIPFORWARDTABLE 1
+#ifndef TORRENT_USE_UNC_PATHS
 #define TORRENT_USE_UNC_PATHS 1
+#endif
 
 // ==== WINDOWS ===
 #elif defined WIN32
@@ -316,7 +318,9 @@ POSSIBILITY OF SUCH DAMAGE.
 #if TORRENT_USE_DEFAULT_IO
 # define TORRENT_USE_OVERLAPPED 1
 #endif
+#ifndef TORRENT_USE_UNC_PATHS
 #define TORRENT_USE_UNC_PATHS 1
+#endif
 
 // ==== SOLARIS ===
 #elif defined sun || defined __sun 
