@@ -11,6 +11,7 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* fixed UNC path normalization (on windows, unless UNC paths are disabled)
 	* fixed possible crash when enabling multiple connections per IP
 	* fixed typo in win vista specific code, breaking the build
 	* change default of rate_limit_utp to true
